WIP on visual representation of Automaton