@@ -1,6 +1,10 @@
+/*
 module automaton {
     requires javafx.controls;
     requires javafx.fxml;
 
     exports automaton;
 }
+*/
+
+//--module-path "C:\Program Files\Java\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml
