@@ -27,5 +27,3 @@ object GUIMain extends JFXApp3 :
       stage.scene = newScene
 
 
-
-//--module-path "C:\Program Files\Java\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml
